fix(footer): heart desaligned

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -33,3 +33,7 @@
     color: var(--foreground);
     text-transform: uppercase;
 }
+
+.text svg {
+    vertical-align: bottom;
+}
